Support markdown in descriptions and definitions

--- a/view/projects.html
+++ b/view/projects.html
@@ -6,7 +6,7 @@
   </h2>
 
   <span class='type' data-bind='text: type'></span>
-  <p class='description' data-bind='text: description'></p>
+  <div class='description' data-bind='html: description'></div>
 
   <section>
     <h3>My contributions</h3>
