--- a/view/technologies.html
+++ b/view/technologies.html
@@ -1,7 +1,7 @@
 <!-- ko foreach: $component -->
 <article class='technology' data-bind='attr: {id: id}'>
   <h2 class='technlogy name' data-bind='text: name'></h2>
-  <p class='definition' data-bind='text: definition'></p>
+  <div class='definition' data-bind='html: definition'></div>
   <h3>Used in projects</h3>
   <ul class='projects names' data-bind='foreach: projects, click: $root.selectProject'>
     <li class='project name' data-bind='text: name'></li>
