--- a/style/style.css
+++ b/style/style.css
@@ -61,9 +61,17 @@ h2 {
   display: inline;
   font-size: 1.5rem;
 }
+section {
+  display: flex;
+  align-items: baseline;
+}
 h3 {
+  margin: 0 0.5rem 0 0;
+  padding: 0;
   font-size: 1rem;
   font-weight: normal;
+  width: 7rem;
+  flex: 0 0 auto;
 }
 h3, .type {
   color: darkSlateGray;
@@ -93,11 +101,14 @@ ul.contributions {
   margin: 1ex 0;
 }
 .contributions li {
-  margin: 0.5ex 0;
+  margin: 0.5ex 0 0.5ex 1em;
+  text-indent: -1em;
 }
 .contributions li::before {
   content: '*';
-  margin: 0.5em;
+  display: inline-block;
+  width: 1em;
+  text-indent: 0;
   color: darkGray;
 }
 
