--- a/view/pageSwitcher.html
+++ b/view/pageSwitcher.html
@@ -1,7 +1,7 @@
 <div role='radiogroup' class='pages names' data-bind='foreach: $component'>
    <label class='page'>
      <input type='radio' data-bind='attr: {value: name}, checked: $parent.current'>
-     <span class='label name' data-bind='text: label'></span>
+     <span class='label name clickable' data-bind='text: label'></span>
    </label>
 </div>
 
