--- a/view/keyword.html
+++ b/view/keyword.html
@@ -1,10 +1,11 @@
 <article class='skill' data-bind='attr: {id: id}'>
   <h2 class='technlogy name' data-bind='text: name'></h2>
+  <span class='type' data-bind='text: type'></span>
   <div class='definition' data-bind='html: definition'></div>
   <section>
     <h3>Used in projects</h3>
     <ul class='projects names' data-bind='foreach: projects, click: $root.selectProject'>
-      <li class='project name' data-bind='text: name'></li>
+      <li class='project name clickable' data-bind='text: name'></li>
     </ul>
   </section>
 </article>
