--- a/style/style.css
+++ b/style/style.css
@@ -40,7 +40,8 @@ main {
 }
 #popup #close::after {
   visibility: visible;
-  content: '×';
+  content: 'X';
+  font-family: Raleway, sans-serif;
   font-size: 2rem;
   line-height: 2rem;
   color: white;
