Blur background content when popup is visible

--- a/style/style.css
+++ b/style/style.css
@@ -28,6 +28,10 @@ main {
   background-color: white;
   padding: 2rem;
 }
+main.popup-visible {
+  -webkit-filter: blur(4px);
+  filter: blur(4px);
+}
 #popup.project {
   width: calc(100% - 2em);
 }
