--- a/view/project.html
+++ b/view/project.html
@@ -10,13 +10,7 @@
                                                       click: $root.selectProject'>
 
   <div class='description' data-bind='html: description'></div>
-
-  <section>
-    <h3>My contributions</h3>
-    <ul class='contributions' data-bind='foreach: contributions'>
-      <li class='contribution' data-bind='text: $data'></li>
-    </ul>
-  </section>
+  <div class='story' data-bind='html: story'></div>
 
   <section>
     <h3>Skills involved</h3>
