--- a/view/project.html
+++ b/view/project.html
@@ -9,7 +9,7 @@
   <img class='screenshot' alt='screenshot' data-bind='attr: {src: screenshot},
                                                       click: $root.selectProject'>
 
-  <div class='description' data-bind='html: description'></div>
+  <p class='description' data-bind='text: description'></p>
   <div class='story' data-bind='html: story'></div>
 
   <section>
