--- a/style/style.css
+++ b/style/style.css
@@ -85,11 +85,12 @@ ul.names, ul.names li {
 ul.names {
   display: inline;
   padding: 0;
-  margin: 0;
+  margin: 0 0 1ex 0;
 }
 ul.names li {
   display: inline-block;
   border: 1px solid darkGray;
+  background-color: snow;
   border-radius: 0.2em;
   padding: 0.2em;
   margin: 0.2ex 0;
