--- a/view/project.html
+++ b/view/project.html
@@ -15,7 +15,8 @@
   <section class='skills'>
     <h3>Skills involved</h3>
     <ul class='skills names' data-bind='foreach: skills, click: $root.selectSkill'>
-      <li class='skill name clickable' data-bind='text: name'></li>
+      <li class='skill name clickable' title='show details about this skill'
+          data-bind='text: name'></li>
     </ul>
   </section>
 
@@ -23,7 +24,8 @@
     <h3>Technologies used</h3>
     <ul class='technologies names' data-bind='foreach: technologies,
                                               click: $root.selectTechnology'>
-      <li class='technology name clickable' data-bind='text: name'></li>
+      <li class='technology name clickable' title='show details about this technology'
+          data-bind='text: name'></li>
     </ul>
   </section>
 </article>
