--- a/view/about.html
+++ b/view/about.html
@@ -7,8 +7,13 @@
   </p>
   <p>
     On this web site you can see the projects I have worked on, the skills I have practiced in
-    the process, and the technologies I am familiar with. I am still improving this portfolio
-    site, so I would appreciate any feedback you could give.
+    the process, and the technologies I am familiar with. If you are in need of software
+    development services, I would be happy to hear from you even if the technologies listed
+    here are not what you expect. I am very effective at learning and applying technologies.
+  </p>
+  <p>
+    I am still improving this portfolio site, so I would appreciate any feedback you could give.
+    Thank you for your visit!
   </p>
 </article>
 
