--- a/style/fonts.css
+++ b/style/fonts.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Raleway:200|Roboto:300);
+@import url(http://fonts.googleapis.com/css?family=Raleway:200|Roboto:300|Roboto+Condensed:300);
 
 * {
   font-family: 'Roboto', sans-serif;
@@ -7,4 +7,8 @@
 h2, h2 a {
   font-family: 'Raleway', sans-serif;
   font-weight: 200;
+}
+h3, .type, li.name {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 300;
 }
