--- a/style/style.css
+++ b/style/style.css
@@ -143,7 +143,7 @@ h3 {
   padding: 0;
   font-size: 1rem;
   font-weight: normal;
-  width: 7rem;
+  width: 5em;
   -webkit-box-flex: 0;
   -webkit-flex: 0 0 auto;
       -ms-flex: 0 0 auto;
