--- a/style/style.css
+++ b/style/style.css
@@ -105,6 +105,7 @@ main.popup-visible {
 main article {
   padding: 0.5em;
   margin: 0.5rem;
+  width: 100%;
   box-shadow: 1px 1px 1px lightgray;
 }
 main article .story, main article .technologies {
@@ -272,7 +273,7 @@ li.clickable:hover, main article.project:hover {
   margin-right: 1em;
   border-radius: 1em;
 }
-@media (min-width: 80rem) {
+@media (min-width: 60rem) {
   main article.project {
     width: calc(50% - 2rem);
   }
