--- a/view/popup.html
+++ b/view/popup.html
@@ -1,7 +1,6 @@
-<!-- ko if: $component.item -->
-  <div class='popup' data-bind='class: type, style: {zIndex: zIndex},
-                                css: {"top-most": isTopMost}'>
-    <!-- ko component: {name: component, params: item} --><!-- /ko -->
-    <button class='close' data-bind='click: close'>Close</button>
-  </div>
-<!-- /ko -->
+<div class='popup' data-bind='transitionVisible: visible,
+                              class: type,
+                              css: {"top-most": isTopMost}'>
+  <!-- ko component: {name: component, params: item} --><!-- /ko -->
+  <button class='close' data-bind='click: close'>Close</button>
+</div>
