--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,7 @@ html {
   box-sizing: border-box;
 }
 body {
+  height: 100vh;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -22,7 +23,7 @@ body {
           flex-flow: column;
 }
 main {
-  overflow-y: auto;
+  overflow-y: scroll;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
