--- a/style/style.css
+++ b/style/style.css
@@ -208,9 +208,13 @@ li.clickable:hover, main article.project:hover {
   box-shadow: 0 0 1px darkCyan;
 }
 .photo {
-  text-align: center;
+  float: left;
+  margin: 0 1em 1em 0;
   border-radius: 1em;
   max-height: 30vh;
+}
+.photo + p {
+  margin-top: 0;
 }
 article::after {
   content: '';
@@ -223,7 +227,6 @@ article::after {
     display: block;
   }
   .photo {
-    float: left;
     width: 20em;
     margin: 0 2em 0 0;
     max-height: initial;
