Add darken effect to item under popup

--- a/style/popup.css
+++ b/style/popup.css
@@ -55,12 +55,12 @@
   overflow: auto;
 }
 main.popup-visible {
-  -webkit-filter: blur(4px);
-  filter: blur(4px);
+  -webkit-filter: blur(4px) brightness(0.8);
+  filter: blur(4px) brightness(0.8);
 }
 .popup:not(.top-most) {
-  -webkit-filter: blur(2px);
-  filter: blur(2px);
+  -webkit-filter: blur(2px) brightness(0.9);
+  filter: blur(2px) brightness(0.9);
 }
 .popup .screenshot {
   display: none;
