--- a/style/popup.css
+++ b/style/popup.css
@@ -1,6 +1,6 @@
 .popup {
-  -webkit-transition-timing-function: ease;
-          transition-timing-function: ease;
+  -webkit-transition-timing-function: ease-out;
+          transition-timing-function: ease-out;
   position: fixed;
   z-index: 100;
   left: 0;
@@ -10,19 +10,16 @@
   max-width: 100%;
   background-color: ivory;
   padding: 0.5rem;
-  -webkit-transform: scale(1, 1);
-      -ms-transform: scale(1, 1);
-          transform: scale(1, 1);
-  -webkit-transform-origin: bottom;
-      -ms-transform-origin: bottom;
-          transform-origin: bottom;
+  -webkit-transform: translate(0, 0);
+      -ms-transform: translate(0, 0);
+          transform: translate(0, 0);
 }
 .popup[data-display-state='showing'],
 .popup[data-display-state='finishedHiding'],
 .popup[data-display-state='hidden'] {
-  -webkit-transform: scale(1, 0);
-      -ms-transform: scale(1, 0);
-          transform: scale(1, 0);
+  -webkit-transform: translate(0, 100%);
+      -ms-transform: translate(0, 100%);
+          transform: translate(0, 100%);
 }
 .popup {
   -webkit-transition-property: none;
