--- a/view/about.html
+++ b/view/about.html
@@ -2,9 +2,28 @@
   <img class='photo' alt='photo' src='image/photo.png'>
   <p>
     My name is Yaohan Chen. I am a software and web developer currently available for hire.
-    You are welcome to contact me at
-    <a href='mailto:yaohan.chen@gmail.com'>yaohan.chen@gmail.com</a>.
+    You are welcome to contact me at:
   </p>
+  <dl class='contact'>
+    <dt class='email'>Email</dt>
+    <dd class='email'>
+      <a href='mailto:yaohan.chen@gmail.com' 
+         target='external'
+         title='Write me an email'>yaohan.chen@gmail.com</a>
+    </dd>
+    <dt class='github'>GitHub</dt>
+    <dd>
+      <a href='http://github.com/hagabaka/'
+         target='external'
+         title='Visit my GitHub profile'>@hagabaka</a>
+    </dd>
+    <dt class='twitter'>Twitter</dt>
+    <dd class='twitter'>
+      <a href='http://twitter.com/hagabaka/'
+         target='external'
+         title='Visit my Twitter page'>@hagabaka</a>
+    </dd>
+  </dl>
   <p>
     On this web site you can see the projects I have worked on, the skills I have practiced in
     the process, and the technologies I am familiar with. If you are in need of software
