--- a/style/popup.css
+++ b/style/popup.css
@@ -75,18 +75,20 @@ main.popup-visible {
   position: absolute;
   width: 2rem;
   height: 2rem;
-  font-size: 2rem;
+  font-size: 0.5em;
+  vertical-align: middle;
   line-height: 2rem;
   border-radius: 1rem;
   cursor: pointer;
 }
 .popup .close::before {
-  content: 'V';
+  content: 'down';
+  vertical-align: middle;
+  font-size: 2em;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-  font-family: Raleway, sans-serif;
   color: white;
   background-color: darkCyan;
   border: 1px solid darkCyan;
@@ -136,7 +138,7 @@ main.popup-visible {
     left: -1rem;
   }
   .popup .close::before {
-    content: 'X';
+    content: 'close';
   }
 }
 
