--- a/style/popup.css
+++ b/style/popup.css
@@ -90,8 +90,7 @@ main.popup-visible {
   bottom: 0;
   right: 0;
   color: white;
-  background-color: darkCyan;
-  border: 1px solid darkCyan;
+  background-color: indianred;
 }
 .popup, .popup .close::before {
   box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.3);
