Update about page

--- a/view/about.html
+++ b/view/about.html
@@ -1,8 +1,8 @@
 <article>
   <img class='photo' alt='photo' src='image/photo.png'>
   <p>
-    My name is Yaohan Chen. I am a software and web developer currently available for hire.
-    You are welcome to contact me at:
+    My name is Yaohan Chen. I am a software and web developer currently available for contract
+    work. You are welcome to contact me at:
   </p>
   <dl class='contact'>
     <dt class='email'>Email</dt>
